<resources>
    <string name="app_name">World Tour</string>

    <!--Developer Details-->
    <string name="userName">Rachit Goyal</string>
    <string name="userEmail">rachit@osahub.com</string>
    <string name="company_name">Osahub Technologies</string>
    <string name="about_developer">Ray, the eloquent engineer, is a Chief Executive Officer at OSAHUB Technologies. He is an excellent orator, and will always have a witty response to any situation. Besides being great with words, he has a keen interest in all aspects of technology. Having worked on a plethora of languages and technologies, he is a jack of all trades. He has developed products ranging from web portals and large scale backend processes to android apps and games for some of the finest MNC\'s around the world. \n\nAs a hobby, he practices \'Ethical\' Hacking (although we seriously doubt anything he does is ethical at all). He loves to read and explore new arenas within the technology world, and is always cognizant of all that\'s new and in.</string>
    <!--Developer Details-->

    <!--Activities-->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_developer_profile">Rachit Goyal</string>
    <!--Activities-->

    <!--Navigation Drawer Options-->
    <string name="about_the">About the</string>
    <string name="developer">Developer</string>
    <string name="developer_profile">Developer Profile</string>
    <string name="other_applications">Other Applications</string>
    <string name="communicate">Communicate</string>
    <string name="share_application">Share Application</string>
    <string name="rate_application">Rate Application</string>
    <string name="email_author">Email Author</string>
    <!--Navigation Drawer Options-->

    <!--Misc-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_Info">Info</string>
    <string name="category">Category</string>
    <string name="count">Count</string>
    <string name="visit_website_button">Visit Website</string>
    <string name="progress_animation">Progress Animation</string>
    <string name="goto_gallery">Goto Gallery</string>
    <string name="content_authority">com.osahub.rachit.worldtour</string>
    <string name="title_activity_single_category">SingleCategoryActivity</string>
    <!--Misc-->

    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>
    <string name="search_for_locations">Search for Locations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>