<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/app_settings">
            <menu>
                <item
                    android:id="@+id/nav_favourites"
                    android:icon="@drawable/ic_star"
                    android:title="@string/favourites" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/about_developer">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/developer_profile" />
                <item
                    android:id="@+id/nav_other_apps"
                    android:icon="@drawable/ic_other_apps"
                    android:title="@string/other_applications" />
            </menu>
        </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_application" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_application" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email"
                android:title="@string/email_author" />
        </menu>
    </item>
</menu>
